# Finance-AI

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  ai_provider.py  database.py  finance.db  index.html  main.py  models.py  pyproject.toml  rate_limiter.py  requirements.txt
.github/workflows/: ci.yml
Finance-AI/: README.md
routes/: accounts.py  analysis.py  budgets.py  general.py  transactions.py
static/: script.js  style.css
tests/: test_core.py
